src/sass/App.scss
@import url("https://fonts.googleapis.com/css?family=Passion+One:400,700,900&display=swap");
@import url("https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap");
@import "variables";
@import "index";
@import "menu";
@import "header";
@import "homeContent";
@import "location_and_franchise";
@import "ingredients";
@import "video_section";
@import "footer";

*,
body,
html {
  box-sizing: border-box;
  list-style: none;
  // font-family: "Josefin Sans", cursive;
  margin: 0;
  padding: 0;
}

body {
  overflow-x: hidden;
}

